Travis build LOCAL pushed to Github Pages

--- a/archives.html
+++ b/archives.html
@@ -76,6 +76,8 @@
         <h1>Archives for Ícaro Medeiros</h1>
 
         <dl>
+                <dt>Sun 23 November 2014</dt>
+                <dd><a href='http://www.icaromedeiros.com.br/dotfiles-what-they-are-why-you-need-one-where-they-live-how-to-do-it.html'>Dotfiles: What they are, why you need one, where they live, how to do it?</a></dd>
                 <dt>Sat 13 September 2014</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/linked-data-in-use.html'>Linked data in use</a></dd>
                 <dt>Sun 10 August 2014</dt>
@@ -140,6 +142,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/bash.html">
+                                bash
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/blogging.html">
                                 blogging
                             </a>
@@ -152,6 +159,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/debian.html">
                                 debian
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/dotfiles.html">
+                                dotfiles
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
@@ -280,6 +292,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/shell.html">
+                                shell
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/social-networks.html">
                                 social networks
                             </a>
@@ -320,6 +337,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/vim.html">
+                                vim
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/web.html">
                                 web
                             </a>
@@ -347,6 +369,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/wolfram-alpha.html">
                                 wolfram alpha
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/zsh.html">
+                                zsh
                             </a>
                         </li>
                     </ul>
