--- a/authors.html
+++ b/authors.html
@@ -73,7 +73,7 @@
         </ol>
 
     <h1>Authors on Ícaro Medeiros</h1>
-        <li><a href="http://www.icaromedeiros.com.br/author/icaro-medeiros.html">Ícaro Medeiros</a> (13)</li>
+        <li><a href="http://www.icaromedeiros.com.br/author/icaro-medeiros.html">Ícaro Medeiros</a> (14)</li>
         </div>
         <div class="col-sm-3 aboutme" id="aboutme">
     <p>
@@ -110,6 +110,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/bash.html">
+                                bash
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/blogging.html">
                                 blogging
                             </a>
@@ -122,6 +127,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/debian.html">
                                 debian
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/dotfiles.html">
+                                dotfiles
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
@@ -250,6 +260,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/shell.html">
+                                shell
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/social-networks.html">
                                 social networks
                             </a>
@@ -290,6 +305,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/vim.html">
+                                vim
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/web.html">
                                 web
                             </a>
@@ -317,6 +337,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/wolfram-alpha.html">
                                 wolfram alpha
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/zsh.html">
+                                zsh
                             </a>
                         </li>
                     </ul>
