Travis build LOCAL pushed to Github Pages

--- a/o-jogo-dos-metadados.html
+++ b/o-jogo-dos-metadados.html
@@ -232,6 +232,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/big-data.html">
+                                big data
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/blogging.html">
                                 blogging
                             </a>
@@ -266,6 +271,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 google
                             </a>
                         </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/hadoop.html">
+                                hadoop
+                            </a>
+                        </li>
                         <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/information-retrieval.html">
                                 information retrieval
@@ -284,6 +294,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/json-schema.html">
                                 json schema
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/kafka.html">
+                                kafka
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -346,7 +361,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 programming
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-1">
                             <a href="http://www.icaromedeiros.com.br/tag/rdf.html">
                                 rdf
                             </a>
@@ -382,6 +397,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/social-media-analytics.html">
+                                social media analytics
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/social-networks.html">
                                 social networks
                             </a>
@@ -391,7 +411,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 social tagging
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/sparql.html">
                                 sparql
                             </a>
@@ -406,7 +426,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 tagging
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/talks.html">
                                 talks
                             </a>
@@ -419,6 +439,21 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/twitter.html">
                                 twitter
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/user-modeling.html">
+                                user modeling
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/user-science.html">
+                                user science
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/user-tracking.html">
+                                user tracking
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -533,7 +568,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2014 Ícaro Medeiros
+         <div class="col-xs-10">&copy; 2015 Ícaro Medeiros
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
