--- a/archives.html
+++ b/archives.html
@@ -76,6 +76,8 @@
         <h1>Archives for Ícaro Medeiros</h1>
 
         <dl>
+                <dt>Wed 11 March 2015</dt>
+                <dd><a href='http://www.icaromedeiros.com.br/linked-data-big-data-user-science-at-globo-com.html'>Linked Data, Big Data and User Science at globo.com</a></dd>
                 <dt>Sun 23 November 2014</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/dotfiles-what-they-are-why-you-need-one-where-they-live-how-to-do-it.html'>Dotfiles: What they are, why you need one, where they live, how to do it?</a></dd>
                 <dt>Sat 13 September 2014</dt>
@@ -147,6 +149,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/big-data.html">
+                                big data
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/blogging.html">
                                 blogging
                             </a>
@@ -181,6 +188,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 google
                             </a>
                         </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/hadoop.html">
+                                hadoop
+                            </a>
+                        </li>
                         <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/information-retrieval.html">
                                 information retrieval
@@ -199,6 +211,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/json-schema.html">
                                 json schema
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/kafka.html">
+                                kafka
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -261,7 +278,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 programming
                             </a>
                         </li>
-                        <li class="list-group-item tag-2">
+                        <li class="list-group-item tag-1">
                             <a href="http://www.icaromedeiros.com.br/tag/rdf.html">
                                 rdf
                             </a>
@@ -297,6 +314,11 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/social-media-analytics.html">
+                                social media analytics
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/social-networks.html">
                                 social networks
                             </a>
@@ -306,7 +328,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 social tagging
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/sparql.html">
                                 sparql
                             </a>
@@ -321,7 +343,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                                 tagging
                             </a>
                         </li>
-                        <li class="list-group-item tag-4">
+                        <li class="list-group-item tag-2">
                             <a href="http://www.icaromedeiros.com.br/tag/talks.html">
                                 talks
                             </a>
@@ -334,6 +356,21 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
                         <li class="list-group-item tag-4">
                             <a href="http://www.icaromedeiros.com.br/tag/twitter.html">
                                 twitter
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/user-modeling.html">
+                                user modeling
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/user-science.html">
+                                user science
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://www.icaromedeiros.com.br/tag/user-tracking.html">
+                                user tracking
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -448,7 +485,7 @@ PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2014 Ícaro Medeiros
+         <div class="col-xs-10">&copy; 2015 Ícaro Medeiros
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
